Enabled word-wrap after slashes in paths to component (+ more a11y fixes)

--- a/storybook-addon-package/src/blocks/DependencyPreviews.module.css
+++ b/storybook-addon-package/src/blocks/DependencyPreviews.module.css
@@ -22,16 +22,5 @@
 .pathData.pathData {
 	margin: 0;
 	display: grid;
-	gap: 0.5em;
-}
-
-.pathDataItem.pathDataItem {
-	margin: 0;
-	padding: 0;
-}
-
-.pathLinkWrapper {
-	display: flex;
-	align-items: center;
-	gap: 0.5em;
+	gap: 1em;
 }
